force-app/main/default/objects/Notification_Asset__c/Notification_Asset__c.object-meta.xml
<CustomObject>
    <description>Notification Asset object to hold asset and service status data</description>
    <label>Notification Asset</label>
    <nameField>
        <displayFormat>NA-{0000000}</displayFormat>
        <label>Notification Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>