force-app/main/default/objects/Notification_Asset__c/fields/Acorn_SBID__c.field-meta.xml
<CustomField>
    <fullName>Acorn_SBID__c</fullName>
    <description>To identify the specific component associated to the integrated data (i.e., Pickup rather than the holistic 8yd T DMP)
This field will reflect Service baseline associated with asset</description>
    <label>Service Baseline</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>