force-app/main/default/objects/Notification_Asset__c/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset Detail for which notification is being sent</description>
    <label>Asset Name</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Notification Assets</relationshipLabel>
    <relationshipName>Notification_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>