force-app/main/default/objects/Notification_Asset__c/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <description>External field for SSIS</description>
    <label>External Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>