force-app/main/default/objects/Notification_Asset__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <formula>AssetId__r.Schedule__c</formula>
    <label>Frequency</label>
    <type>Text</type>
</CustomField>