force-app/main/default/objects/Notification_Asset__c/fields/Is_Eligible_For_Notification__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_For_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to hold flag whether asset is eligble for notification or not.</description>
    <label>Is Eligible For Notification</label>
    <type>Checkbox</type>
</CustomField>