force-app/main/default/objects/Notification_Asset__c/fields/Service_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Service_Quantity__c</fullName>
    <description>Quantity provided by OCS</description>
    <label>Service Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>