force-app/main/default/objects/Notification_Asset__c/fields/Service_StatusId__c.field-meta.xml
<CustomField>
    <fullName>Service_StatusId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Service Status associated with asset</description>
    <label>Service Status</label>
    <referenceTo>Service_Status__c</referenceTo>
    <relationshipLabel>Notification Assets</relationshipLabel>
    <relationshipName>Notification_Assets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>