force-app/main/default/objects/Notification_Asset__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <label>Status Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>