force-app/main/default/objects/Notification_Asset__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>To hold  specific exception sub-type received</description>
    <label>Sub Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>